17 July 2020: Wouter
	- Fix libnettle compile for session ticket key callback function
	  changes.

17 July 2020: Ralph
	- Merge PR #234 - Ensure proper alignment of cmsg buffers by Jérémie
	  Courrèges-Anglas.
	- Fix PR #234 log_assert sizeof to use union buffer.

16 July 2020: Wouter
	- Fix check conf test for referencing installation paths.
	- Fix unused variable warning for clang analyzer.

16 July 2020: George
	- Introduce 'include-toplevel:' configuration option.

16 July 2020: Ralph
	- Add bidirectional frame streams support.

8 July 2020: Wouter
	- Fix add missing DSA header, for compilation without deprecated
	  OpenSSL APIs.
	- Fix to use SSL_CTX_set_tlsext_ticket_key_evp_cb in OpenSSL
	  3.0.0-alpha4.
	- Longer keys for the test set, this avoids weak crypto errors.

7 July 2020: Wouter
	- Fix #259: Fix unbound-checkconf does not check view existence.
	  unbound-checkconf checks access-control-view, access-control-tags,
	  access-control-tag-actions and access-control-tag-datas.
	- Fix offset of error printout for access-control-tag-datas.
	- Review fixes for checkconf #259 change.

6 July 2020: Wouter
	- run_vm cleanup better and removes trailing slash on single argument.

29 June 2020: Wouter
	- Move reply list clean for serve expired mesh callback to after
	  the reply is sent, so that script callbacks have reply_info.
	- Also move reply list clean for mesh callbacks to the scrip callback
	  can see the reply_info.
	- Fix for mesh accounting if the reply list already empty to begin
	  with.
	- Fix for mesh accounting when rpz decides to drop a reply with a
	  tcp stream waiting for it.
	- Review fix for number of detached states due to use of variable
	  after end of loop.
	- Fix tcp req info drop due to size call into mesh accounting
	  removal of mesh state during mesh send reply.

24 June 2020: Wouter
	- iana portlist updated.
	- doxygen file comments for dynlibmodule.

17 June 2020: Wouter